# citibank-statement-downloader

./: .env.template  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
citibank/: main.py  settings.py
citibank/browser/: login.py
citibank/gmail/: credentials.py  gmail.py
src/citibank/: __init__.py  main.py
src/citibank/browser/: login.py
src/citibank/gmail/: credentials.py  gmail.py
