[tool.poetry]
name = "citibank"
version = "0.1.0"
description = "Python library that downloads e-statements from Citibank"
repository = "https://github.com/benjamin-awd/citibank-statement-downloader"
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.32.0"
google-api-python-client = "^2.139.0"
pydantic-settings = "^2.4.0"
google-cloud-secret-manager = "^2.20.2"
selenium = "^4.23.1"
google-cloud-storage = "^2.18.0"
selenium-stealth = "^1.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.12.0"
taskipy = "^1.13.0"
flake8 = "^7.1.0"
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
pysnooper = "^1.2.0"
google-api-python-client-stubs = "^1.26.0"
mypy = "^1.11.1"
types-requests = "^2.32.0.20240712"
types-python-dateutil = "^2.9.0.20240316"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
ipykernel = "^6.29.5"

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "flake8 citibank"
full_test = "pytest -n auto"
mypy = "mypy citibank"
ci = "poetry run task format && poetry run task lint && poetry run task test"
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = [
    "annotation-unchecked",
]

[[tool.mypy.overrides]]
module = [
    "citibank.*",
    "google.*",
    "google_auth_oauthlib.flow",
]
ignore_missing_imports = true
