[tool.poetry]
name = "citibank"
version = "0.1.0"
description = "Python library that downloads e-statements from Citibank"
repository = "https://github.com/benjamin-awd/citibank-statement-downloader"
authors = ["Benjamin Dornel <benjamindornel@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
google-auth-oauthlib = "^1.2.1"
google-auth = "^2.35.0"
google-api-python-client = "^2.147.0"
pydantic-settings = "^2.5.2"
google-cloud-secret-manager = "^2.20.2"
selenium = "^4.25.0"
google-cloud-storage = "^2.18.2"
selenium-stealth = "^1.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.12.0"
taskipy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
pysnooper = "^1.2.1"
google-api-python-client-stubs = "^1.28.0"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240914"
types-python-dateutil = "^2.9.0.20240906"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
ipykernel = "^6.29.5"

[tool.taskipy.tasks]
format = "isort . && black ."
lint = "flake8 citibank"
full_test = "pytest -n auto"
mypy = "mypy citibank"
ci = "poetry run task format && poetry run task lint && poetry run task test"
test = "pytest ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = [
    "annotation-unchecked",
]

[[tool.mypy.overrides]]
module = [
    "citibank.*",
    "google.*",
    "google_auth_oauthlib.flow",
]
ignore_missing_imports = true
